Add new function to personal recommendation

--- a/_General_courses/general_recommend.ipynb
+++ b/_General_courses/general_recommend.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "[270 rows x 10 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_student = pd.DataFrame(columns=['user1'], index=['assignment', 'test', 'in_group', 'attend', 'report'])\n",
+    "df_student['user1'] = [1, 5, 0, 5, 0]\n",
+    "rating = list(df_student['user1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 5, 0, 5, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_student_rating(id):\n",
+    "    return df_student[id]\n",
+    "test = np.array(get_student_rating('user1'))\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +494,7 @@
        "[270 rows x 10 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +810,7 @@
        " '潘志實 - 數學漫遊': [4.0, 0.0, 0.0, 0, 6.0]}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,25 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def recommend(course_name):\n",
-    "    temp = pd.DataFrame(columns=['course', 'similarity'], index=range(len(features)))\n",
-    "    for i, course in enumerate(features.keys(), start=1):\n",
-    "        sim = cosine_similarity([features[course_name]], [features[course]])[0][0]\n",
-    "        temp.loc[i] = [course, sim]\n",
-    "    temp = temp.sort_values(by='similarity', ascending=False)\n",
-    "    temp = temp.reset_index(drop=True)\n",
-    "    temp = temp.drop(temp[temp['course'] == course_name].index)\n",
-    "    return temp.loc[:10, ['course', 'similarity']]\n",
-    "Recommendations = recommend('姜杰 - 統計與生活')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -937,13 +953,140 @@
        "10           徐佐銘 - 環境倫理(進)   0.987241"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def recommend(course_name):\n",
+    "    temp = pd.DataFrame(columns=['course', 'similarity'], index=range(len(features)))\n",
+    "    for i, course in enumerate(features.keys(), start=1):\n",
+    "        sim = cosine_similarity([features[course_name]], [features[course]])[0][0]\n",
+    "        temp.loc[i] = [course, sim]\n",
+    "    temp = temp.sort_values(by='similarity', ascending=False)\n",
+    "    temp = temp.reset_index(drop=True)\n",
+    "    temp = temp.drop(temp[temp['course'] == course_name].index)\n",
+    "    return temp.loc[:10, ['course', 'similarity']]\n",
+    "Recommendations = recommend('姜杰 - 統計與生活')\n",
     "Recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>course</th>\n",
+       "      <th>similarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>胡慶山 - 全球體系與兩岸關係(全英語授課)</td>\n",
+       "      <td>0.959121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>周文卿 - 生活與財經(雙語授課(中文/英文))</td>\n",
+       "      <td>0.956858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>李安瑞 - 智慧綠生活</td>\n",
+       "      <td>0.946903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>林郁嫺 - 德語文學名著選讀（一）</td>\n",
+       "      <td>0.946903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>霍珍妮 - 國際非政府組織(全英語授課)</td>\n",
+       "      <td>0.938693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>朱惠芳 - 性別中的科學</td>\n",
+       "      <td>0.931436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>鄭丞良 - 中國歷史與人物</td>\n",
+       "      <td>0.925476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>邱俊達 - 社會未來</td>\n",
+       "      <td>0.917838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>林鄉雨 - 西洋歌劇欣賞入門(全英語授課)</td>\n",
+       "      <td>0.914659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>黃富娟 - 美洲現勢</td>\n",
+       "      <td>0.914659</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     course similarity\n",
+       "0    胡慶山 - 全球體系與兩岸關係(全英語授課)   0.959121\n",
+       "1  周文卿 - 生活與財經(雙語授課(中文/英文))   0.956858\n",
+       "2               李安瑞 - 智慧綠生活   0.946903\n",
+       "3         林郁嫺 - 德語文學名著選讀（一）   0.946903\n",
+       "4      霍珍妮 - 國際非政府組織(全英語授課)   0.938693\n",
+       "5              朱惠芳 - 性別中的科學   0.931436\n",
+       "6             鄭丞良 - 中國歷史與人物   0.925476\n",
+       "7                邱俊達 - 社會未來   0.917838\n",
+       "8     林鄉雨 - 西洋歌劇欣賞入門(全英語授課)   0.914659\n",
+       "9                黃富娟 - 美洲現勢   0.914659"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def recommend_student(student):\n",
+    "    temp = pd.DataFrame(columns=['course', 'similarity'], index=range(len(features)))\n",
+    "    for i, course in enumerate(features.keys()):\n",
+    "        sim = cosine_similarity([student], [features[course]])[0][0]\n",
+    "        temp.loc[i] = [course, sim]\n",
+    "    temp = temp.sort_values(by='similarity', ascending=False)\n",
+    "    temp = temp.reset_index(drop=True)\n",
+    "    return temp.loc[:9, ['course', 'similarity']]\n",
+    "Recommendation2 = recommend_student(test)\n",
+    "Recommendation2"
    ]
   }
  ],
